feat(email & jwt) Se agrego servicio de envio de emails, el servicio de jwt esta en proceso de creacion.

--- a/appsettings.json
+++ b/appsettings.json
@@ -11,9 +11,15 @@
   },
   "SMTPConfiguration": {
     "Host": "sandbox.smtp.mailtrap.io",
-    "Port": "2525",
+    "Port": 2525,
     "Username": "87f6518162dd23",
     "Password": "66327c00bd3c33",
     "EnableSSL": false
+  },
+  "JwtConfiguration":{
+    "SecretKey": "your_secret_key",
+    "Issuer": "your_issuer",
+    "Audience": "your_audience",
+    "ExpirationTime": "00:30:00"
   }
 }
