refactor(Program) Configuracion de JWT en Program - completado

--- a/appsettings.json
+++ b/appsettings.json
@@ -17,7 +17,7 @@
     "EnableSSL": false
   },
   "JwtConfiguration":{
-    "SecretKey": "your_secret_key",
+    "SecretKey": "TuSuperClaveUltraSecreta123",
     "Issuer": "your_issuer",
     "Audience": "your_audience",
     "ExpirationTime": "00:30:00"
