feat(jwt) Funcionalidad de generacion de JWT Tokens - completada

--- a/appsettings.json
+++ b/appsettings.json
@@ -17,9 +17,9 @@
     "EnableSSL": false
   },
   "JwtConfiguration":{
-    "SecretKey": "mN8xV4qzU7JpLd2h+Fs0a9Xe3QbYkRwT5CvZ1HtOJFc=lm",
+    "SecretKey": "$lmkeyjwtaspnetcorewithidentity20",
     "Issuer": "your_issuer",
-    "Audience": "your_audience",
+    "Audience": "your_audience", 
     "ExpirationTime": "00:30:00"
   }
 }
